--- a/day2/index.html
+++ b/day2/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My bookmarks</title>
+    <title>Title 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Hey <br> My bookmarks</h1>
+    <h1>Hey <br> My bookmarks heading 1</h1>
     <h2>Heading 2 </h2>
     <h3>Heading 3</h3>
     <h4>Heading 3</h4>
     <h5>Heading 3</h5>
     <h6>Heading 3</h6>
 
-    <p>Hello- Paragraph</p>
+    <p>Hello- Paragraph <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius minima, eveniet quam
+        explicabo placeat esse harum illum officiis aliquam ipsam est molestiae tenetur quae facere enim mollitia
+        nostrum, necessitatibus nemo.</p>
     <script src="script.jss"></script>
 </body>
+
 </html>
