day14- color, font, text

--- a/day014/index.html
+++ b/day014/index.html
@@ -26,5 +26,8 @@
     <div class="word">
         this is word spacing
     </div>
+<hr>
+<div id="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis aspernatur ullam nisi assumenda deleniti totam autem obcaecati earum, corporis quibusdam. Ullam eligendi officiis qui sit.</div>
+    
 </body>
 </html>
